--- a/style.css
+++ b/style.css
@@ -10,16 +10,12 @@ body {
     margin:20px;
 }
 
-h1,h4 {
+h1,h2,h3,h4 {
     color:#0BADA6;
     font-weight: bold;
     font-family: Georgia;
 }
 
-hr { 
-    margin:20px;
-}
-  
 .navbar-custom .navbar-brand{ 
     color:#0BADA6;
     font-weight: bold;
@@ -30,8 +26,17 @@ hr {
 
 #description-image {
     float: left;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     margin-top: 20px;
     margin-right: 20px;
+}
+
+.landing-photo-links{
+    width: 140px;
+    height: 140px;
+}
+
+#images{
+    text-align: center;
 }
