--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ h1,h2,h3,h4 {
     height: 140px;
 }
 
+.landing-photo-current{
+    width: 140px;
+    height: 140px;
+    border: 2px solid #0BADA6;
+}
+
 #images{
     text-align: center;
 }
